--- a/src/articubot_one/package.xml
+++ b/src/articubot_one/package.xml
@@ -7,6 +7,11 @@
   <maintainer email="my_email@email.com">Josh Newans</maintainer>
   <license>TODO: License declaration</license>
 
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
+
+
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
